# nyx

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY-AUDIT-2026-06-16.md  SECURITY-AUDIT-2026-06-17.md  SECURITY.md  docker-compose.postgres.yml  docker-compose.yml  nyx.sh  semgrep-results.json  setup.sh
backend/: Dockerfile  entrypoint.sh  log_config.json  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/core/: constants.py  crypto.py  exceptions.py  limiter.py  security.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  auth_lockout.py  base.py  custom_compliance.py  finding.py  jira_link.py  regression_auto_alert.py  remediation.py  repo_risk_history.py  repository.py  risk_acceptance.py  saved_filter.py  sbom.py  scan.py  scan_schedule.py  sla_policy.py  suppression_pattern.py  user_session.py
backend/app/routers/: ai_costs.py  api_keys.py  audit.py  compliance.py  dashboard.py  findings.py  jira.py  regression_alerts.py  remediation.py  reports.py  repositories.py  saved_filters.py  sbom.py  scans.py  schedules.py  sla_policies.py  velocity.py  webhooks.py
backend/app/schemas/: finding.py  remediation.py  repository.py  scan.py
backend/app/services/: ai_service.py  audit_service.py  auto_pr_audit_service.py  code_scanning_service.py  compliance_service.py  deduplication_service.py  dependabot_service.py  github_service.py  (+5 more)
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_auto_pr_audit_service.py  test_auto_pr_worker.py
(+114 files in other folders)
