[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyx"
version = "1.0.0"
description = "Nyx — Security Findings Dashboard with AI-powered remediation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.30.0",
    "PyGithub>=2.3.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "unidiff>=0.7.5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]
